@@ -1,3 +1,7 @@
+2004-05-12 Ian Rutt
+ * Removed redundant re_alloc flag argument from proj_allocate subroutine
+	in glimmer_project.f90
+
 2004-05-11 Ian Rutt
  * Removed redundant xscale and yscale components from projection type, 
 	which were originally set equal to dx and dy. All references to
